2005-11-26  Ulrich Drepper  <drepper@redhat.com>

	* nis/ypclnt.c (yp_bind_ypbindprog): Initialize clnt_saddr by hand.
	(ypdomainname): Renamed from __ypdomainname.  No need for initializer.
	(ypbindlist): Renamed from __ypbindlist.
	(do_ypcall): Check memory allocation suceeded before calling
	yp_bind_ypbindprog.
	(yperr_string): Reduce size of function by using only one gettext call.
	(ypbinderr_string): Likewise.
	(yp_match): Free response in case memory for return value cannot be
	allocated.
	(yp_first): Likewise.
	(yp_next): Likewise.
	(do_ypcall_tr): New function which translates error codes as well.
	(yp_match, yp_next, yp_master, yp_order, yp_maplist): Use it.
	(yp_all): Correct test for invalid parameter.
	Pretty printing.

2005-11-25  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/fxstatat.c (__fxstatat): Fix typo.
	(__fxstatat64): Alias from __fxstatat; remove other cnp errors.
	* sysdeps/unix/sysv/linux/alpha/sigaction.c: Include sys/cdefs.h
	and stddef.h.
	* sysdeps/unix/sysv/linux/alpha/bits/mman.h (MREMAP_FIXED): Define.

2005-11-25  Ulrich Drepper  <drepper@redhat.com>

	* Makeconfig (+cflags): Add -fmerge-all-constants by default.

	[BZ #1912]
	* nss/function.def: Add entry to use gethostbyname2 for files.

2005-11-25  Thorsten Kukuk  <kukuk@suse.de>

	* sysdeps/unix/sysv/linux/fxstatat64.c: Include string.h.

2005-11-25  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1926]
	* nss/nss_files/files-netgrp.c (_nss_files_endnetgrent): Change
	return value type to match expected type.

	[BZ #1925]
	* nis/ypclnt.c (yp_order): Correct test for invalid parameter.

2005-11-24  Ulrich Drepper  <drepper@redhat.com>

	* scripts/check-c++-types.sh: Improve comments.

	* scripts/check-local-headers.sh: New file.
	* Makefile (tests): Run check-local-headers.sh.

2005-11-23  Thorsten Kukuk  <kukuk@suse.de>

	* include/sys/sendfile.h: New file.

2005-11-24  Andreas Schwab  <schwab@suse.de>
