@@ -1,5 +1,9 @@
 2005-11-26  Ulrich Drepper  <drepper@redhat.com>
 
+	* nis/nis_table.c (__create_ib_request): Use strdupa instead of
+	variable size array.
+	(RPCTIMEOUT): Mark as const.
+
 	* nis/ypclnt.c (yp_bind_ypbindprog): Initialize clnt_saddr by hand.
 	(ypdomainname): Renamed from __ypdomainname.  No need for initializer.
 	(ypbindlist): Renamed from __ypbindlist.
@@ -15,6 +19,7 @@
 	(yp_match, yp_next, yp_master, yp_order, yp_maplist): Use it.
 	(yp_all): Correct test for invalid parameter.
 	Pretty printing.
+	(RPCTIMEOUT, UDPTIMEOUT): Mark as const.
 
 2005-11-25  Richard Henderson  <rth@redhat.com>
 
